Fixed flex-wrap

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
   align-items: center;
   background:
-    linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url("Media/Images/Logo/background - 2.jpg") no-repeat center center/cover;
+    linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url("Media/Images/Logo/background - 2.jpg") no-repeat center center/cover;
   background-attachment: fixed;
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: clamp(14px, 2vw, 20px);
@@ -19,7 +19,7 @@ body {
   margin: 0 auto;
   justify-content: center;
   text-align: center;
-  width: 100vw;
+  width: 100%;
 }
 
 @font-face {
@@ -155,27 +155,30 @@ body {
 }
 
 .product-lineup {
-  display: flex;
+  display: inline-flex;
+  flex-wrap: wrap;
   /*background: var(--off-white);*/
-  width: 100%;
   justify-content: space-around;
-  padding: 0 0 2%;
+  margin: 0 auto;
+  /*padding: 0 0 2%;*/
+  width: 100%;
 }
 
 .product-card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
+  justify-content: start;
+  width: 60%;
   max-width: 400px;
+  text-align: center;
   /*background: var(--off-white);*/
 }
 
 .product-img {
+  border: solid 3px var(--icing-pink);
   max-width: 400px;
-  max-height: 200px;
+  min-width: 50px;
   width: 100%;
-  border: solid 3px var(--icing-pink)
 }
 
 .product-description {
